Fixed spacing

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 h1{
     font-size: 8vh;
     margin-top: 0;
+    margin-bottom: 0px;
 }
 
 p{
